# risk_regime_switching_model

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
docs/context/: memory.md  results.md  sesion-log.md  todo.md
docs/prd/: PRD.md
docs/references/: python_best_practices.md
docs/superpowers/plans/: 2026-05-27-roro-engine.md  2026-05-27-roro-viz.md  2026-05-28-roro-viz-v2.md  2026-05-28-roro-viz-v3.md  2026-05-28-roro-viz-v4.md  2026-05-28-roro-viz-v5.md
docs/superpowers/specs/: 2026-05-27-roro-engine-design.md  2026-05-27-roro-viz-design.md  2026-05-28-roro-viz-v2-design.md  2026-05-28-roro-viz-v3-design.md  (+2 more)
roro/: __init__.py  alerts.py  backtest.py  classify.py  cli.py  config.py  correlation.py  engine.py  fred_client.py  io.py  regression.py  returns.py  segments.py  tripwire.py  types.py  validation.py  validators.py
roro/report/: __init__.py  beta_vs_global.py  bundle.py  errors.py  figures.py  html.py  load.py  orchestrate.py
scripts/: render_report_images.py
tests/: conftest.py  strategies.py  test_alerts.py  test_backtest.py  test_classify.py  test_cli.py  test_config.py  test_correlation.py  test_engine.py  test_fred_client.py  test_golden.py  test_io.py  test_regression.py  test_reproducibility.py  test_returns.py  test_segments.py  test_tripwire.py  test_types.py  test_validation.py  test_validators.py
tests/report/: conftest.py  test_beta_vs_global.py  test_bundle.py  test_cli.py  test_e2e.py  test_errors.py  test_figures.py  test_html.py  test_load.py  test_orchestrate.py  test_package.py  test_v2_deps.py
(+6 files in other folders)
