[project]
name = "roro"
version = "0.1.0"
description = "RoRo Risk-Regime Classification Engine"
authors = [{name = "Alan Vazquez, CFA"}]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "numpy>=1.26,<2.1",
    "pandas>=2.2,<2.3",
    "pyarrow>=15.0,<18.0",
    "openpyxl>=3.1,<4.0",
    "fredapi>=0.5.2,<0.6",
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "plotly>=5.20,<6.0",
    "scipy>=1.11,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "hypothesis>=6.100,<7.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
roro = "roro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["roro"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]  # too-many-arguments

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["fredapi.*", "plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["error"]
